# gemini-notion-project

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  cloudbuild.yaml  deploy.sh  install-gcloud-sdk.sh  main.py  pyproject.toml  requirements.txt  test_markdown_conversion.py
.github/workflows/: deploy.yml
app/exceptions/: custom_exceptions.py
app/handlers/: pdf_summary.py
app/models/: notion_models.py
app/services/: gemini_service.py  notion_service.py  pdf_service.py
app/utils/: config.py  logger.py
tests/: test_handlers.py
